DuPont DevSB/src/objects/ccrz__E_ProductSpec__c.object
<CustomObject>
    <description>Object used to map products to specifications.  These allows you to associated any number of additional attributes to the product using the common specifications referenced in the Spec table above.</description>
    <fields>
        <fullName>ccrz__ProductID__c</fullName>
        <description>Reference to the product object</description>
        <formula>ccrz__Product__c + &apos;-&apos; +  ccrz__Spec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <label>Product Item</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Product Specs</relationshipLabel>
        <relationshipName>Product_Specs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__SpecValue__c</fullName>
        <description>The value that we are associating to this pairing. For example, if the specification is Processor Speed, the value might be 2.4GHz</description>
        <label>SpecValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Spec__c</fullName>
        <description>Reference to the specification object</description>
        <label>Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>Product Specs</relationshipLabel>
        <relationshipName>Product_Specs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Product Spec</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__ProductID__c</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__Spec__c</columns>
        <columns>ccrz__SpecValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Product Spec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>